poky: Added submodule at sumo-19.0.2 tag
Added layer from Balena github hosted mirror

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "layers/meta-balena"]
 	path = layers/meta-balena
 	url = git@github.com:balena-os/meta-balena.git
+[submodule "layers/poky"]
+	path = layers/poky
+	url = git@github.com:balena-os/poky.git
