meta-tegra: Add submodule on wip-l4t-32.1.0_sumo branch
Used BalenaOS mirror for meta-tegra to enable
compatiblity with sumo

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "layers/meta-rust"]
 	path = layers/meta-rust
 	url = https://github.com/meta-rust/meta-rust.git
+[submodule "layers/meta-tegra"]
+	path = layers/meta-tegra
+	url = https://github.com/balena-os/meta-tegra.git
