--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -7,5 +7,21 @@ BBFILE_COLLECTIONS += "balena-jetson"
 BBFILE_PATTERN_balena-jetson := "^${LAYERDIR}/"
 BBFILE_PRIORITY_balena-jetson = "1337"
 
+# NVidia BSP needs GCC6
+# which we bring in separately
+# as it's only avail in rocko
+GCCVERSION = "6.%"
+
+# kernel-image is installed by meta-tegra. We use kernel-image-initramfs
+# Remove kernel-image package
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image"
+
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "tegra-nvpmodel tegra-configs-nvstartup tegra-configs-udev"
+
+BBMASK += "/meta-tegra/recipes-core/ "
+BBMASK += "/meta-tegra/external/ "
+BBMASK += "/meta-tegra/recipes-graphics/ "
+BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
+
 LAYERSERIES_COMPAT_balena-jetson = "sumo"
 
