--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -24,4 +24,5 @@ BBMASK += "/meta-tegra/recipes-graphics/ "
 BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
 
 LAYERSERIES_COMPAT_balena-jetson = "sumo"
-
+KERNEL_ARGS_jetson-xavier = "console=ttyTHS0,115200 OS=l4t fbcon=map:0"
+SERIAL_CONSOLES_jetson-xavier = "115200;ttyTHS0"
