meta-balena-jetson: Switch compatiblity to warrior
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -7,11 +7,6 @@ BBFILE_COLLECTIONS += "balena-jetson"
 BBFILE_PATTERN_balena-jetson := "^${LAYERDIR}/"
 BBFILE_PRIORITY_balena-jetson = "1337"
 
-# NVidia BSP needs GCC6
-# which we bring in separately
-# as it's only avail in rocko
-GCCVERSION = "6.%"
-
 # kernel-image is installed by meta-tegra. We use kernel-image-initramfs
 # Remove kernel-image package
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image"
@@ -23,6 +18,6 @@ BBMASK += "/meta-tegra/external/ "
 BBMASK += "/meta-tegra/recipes-graphics/ "
 BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
 
-LAYERSERIES_COMPAT_balena-jetson = "sumo"
+LAYERSERIES_COMPAT_balena-jetson = "warrior"
 KERNEL_ARGS_jetson-xavier = "console=ttyTHS0,115200 OS=l4t fbcon=map:0"
 SERIAL_CONSOLES_jetson-xavier = "115200;ttyTHS0"
