--- a/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
@@ -4,3 +4,5 @@
 
 MACHINEOVERRIDES = "jetson-nano:${MACHINE}"
 include conf/machine/jetson-nano.conf
+
+KERNEL_DEVICETREE = "tegra210-p3448-0002-p3449-0000-b00-jn30b-JP4.2.2.dtb"
