--- a/repo.yml
+++ b/repo.yml
@@ -1,6 +1,8 @@
 ---
 type: 'yocto-based OS image'
 reviewers: 1
+esr:
+  version: 2019.07
 upstream:
   repo: 'meta-balena'
   url: 'http://github.com/balena-os/meta-balena'
