--- a/repo.yml
+++ b/repo.yml
@@ -1,6 +1,9 @@
 ---
 type: 'yocto-based OS image'
 reviewers: 1
+esr:
+  line: next
+  version: 2019.10
 upstream:
   repo: 'meta-balena'
   url: 'http://github.com/balena-os/meta-balena'
