conf/machine: JN30B override emmc hardware version
The generic jetson-nano yocto machine was split into 2
versions in upstream meta-tegra. Let's inherit the emmc
version for JN30B.

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
@@ -2,5 +2,5 @@
 ##@NAME: jn30b-nano
 ##@DESCRIPTION: Machine configuration for the Auvidea JN30B Carrier Board for Nvdia Jetson Nano
 
-MACHINEOVERRIDES = "jetson-nano:${MACHINE}"
-include conf/machine/jetson-nano.conf
+MACHINEOVERRIDES = "jetson-nano-emmc:${MACHINE}"
+include conf/machine/jetson-nano-emmc.conf
