conf/layer: Specify uart for TX1
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -22,3 +22,4 @@ LAYERSERIES_COMPAT_balena-jetson = "warrior"
 LAYERSERIES_COMPAT_tegra = "warrior"
 SERIAL_CONSOLES_jetson-xavier = "115200;ttyTHS0"
 SERIAL_CONSOLES_jetson-tx2 = "115200;ttyS0"
+SERIAL_CONSOLES_jetson-tx1 = "115200;ttyS0"
