--- a/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
@@ -1,6 +1,12 @@
 #@TYPE: Machine
 ##@NAME: jn30b-nano
-##@DESCRIPTION: Machine configuration for the Auvidea JN30B Carrier Board for Nvdia Jetson Nano
+##@DESCRIPTION: Machine configuration for the Auvidea JN30B Carrier Board for Nvidia Jetson Nano
 
-MACHINEOVERRIDES = "jetson-nano-emmc:${MACHINE}"
-include conf/machine/jetson-nano-emmc.conf
+MACHINEOVERRIDES = "jetson-nano:${MACHINE}"
+require conf/machine/jetson-nano.conf
+
+# Override emmc specific settings
+TEGRA_FAB = "400"
+TEGRA_BOARDSKU = "0002"
+TEGRA_BUPGEN_SPECS = "fab=200 fab=300 fab=400"
+UBOOT_MACHINE = "p3450-porg-emmc_defconfig"
