test 9260 iwlwifi backport
Signed-off-by: Florin Sarbu <florin@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PRIORITY_balena-jetson = "1337"
 # Remove kernel-image package
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image"
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "tegra-nvpmodel tegra-configs-nvstartup tegra-configs-udev"
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "tegra-nvpmodel tegra-configs-nvstartup tegra-configs-udev backport-iwlwifi"
 
 BBMASK += "/meta-tegra/recipes-core/ "
 BBMASK += "/meta-tegra/external/ "
