layer.conf: Mask gstreamer recipes
GStreamer goes to containers, let's
fix the build here for the rootfs

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -17,6 +17,7 @@ BBMASK += "/meta-tegra/recipes-core/ "
 BBMASK += "/meta-tegra/external/ "
 BBMASK += "/meta-tegra/recipes-graphics/ "
 BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
+BBMASK += "/meta-tegra/recipes-multimedia/gstreamer/"
 
 LAYERSERIES_COMPAT_balena-jetson = "warrior"
 LAYERSERIES_COMPAT_tegra = "warrior"
