conf/machine: update photon and jn30b defconfig names
Old defconfig does not exit in 32.4.2

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
@@ -9,4 +9,4 @@ require conf/machine/jetson-nano.conf
 TEGRA_FAB = "400"
 TEGRA_BOARDSKU = "0002"
 TEGRA_BUPGEN_SPECS = "fab=200 fab=300 fab=400"
-UBOOT_MACHINE = "p3450-porg-emmc_defconfig"
+UBOOT_MACHINE = "p3450-0002_defconfig"
