--- a/layers/meta-balena-jetson/conf/machine/photon-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/photon-nano.conf
@@ -9,4 +9,4 @@ require conf/machine/jetson-nano.conf
 TEGRA_FAB = "400"
 TEGRA_BOARDSKU = "0002"
 TEGRA_BUPGEN_SPECS = "fab=200 fab=300 fab=400"
-UBOOT_MACHINE = "p3450-porg-emmc_defconfig"
+UBOOT_MACHINE = "p3450-0002_defconfig"
