--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -14,7 +14,6 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image"
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "tegra-nvpmodel tegra-configs-nvstartup tegra-configs-udev"
 
 BBMASK += "/meta-tegra/recipes-core/ "
-BBMASK += "/meta-tegra/external/ "
 BBMASK += "/meta-tegra/recipes-graphics/cairo "
 BBMASK += "/meta-tegra/recipes-graphics/clutter "
 BBMASK += "/meta-tegra/recipes-graphics/cogl "
@@ -25,6 +24,8 @@ BBMASK += "/meta-tegra/recipes-graphics/wayland "
 BBMASK += "/meta-tegra/recipes-graphics/xorg-xserver "
 BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
 BBMASK += "/meta-tegra/recipes-multimedia/gstreamer/"
+BBMASK += "/meta-tegra/recipes-graphics/"
+BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
 
 LAYERSERIES_COMPAT_balena-jetson = "warrior"
 LAYERSERIES_COMPAT_tegra = "warrior"
