photon-xavier-nx: add 'jetson-xavier-nx-devkit-emmc' to MACHINEOVERRIDES
With the new include hierarchy in meta-tegra's machine configs:
OE4T/meta-tegra@5f70dc8
'jetson-xavier-nx-devkit-emmc' is not appended to MACHINEOVERRIDES when
including jetson-xavier-nx-devkit-emmc.conf.
Append it here to assure statements for 'jetson-xavier-nx-devkit-emmc'
are applied for this machine.

Changelog-entry: fix machine overrides for photon-xavier-nx
Signed-off-by: Pelle van Gils <pelle@hwky.ai>

--- a/layers/meta-balena-jetson/conf/machine/photon-xavier-nx.conf
+++ b/layers/meta-balena-jetson/conf/machine/photon-xavier-nx.conf
@@ -5,3 +5,7 @@
 
 MACHINEOVERRIDES = "jetson-xavier-nx-devkit-emmc:${MACHINE}"
 include conf/machine/jetson-xavier-nx-devkit-emmc.conf
+
+# work-around for https://github.com/OE4T/meta-tegra/issues/400
+MACHINEOVERRIDES := "${@'${MACHINEOVERRIDES}'.replace(':${MACHINE}',':jetson-xavier-nx-devkit-emmc:${MACHINE}')}"
+
