gitmodules: Add balenaos-extensions
This repository contains host extentions meta-data. It is required to
build host extensions from content from this device repository.

Signed-off-by: Alex Gonzalez <alexg@balena.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "layers/meta-tegra"]
 	path = layers/meta-tegra
 	url = https://github.com/madisongh/meta-tegra.git
+[submodule "balenaos-extensions"]
+	path = balenaos-extensions
+	url = https://github.com/balena-os/balenaos-extensions.git
