--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -26,8 +26,8 @@ BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
 BBMASK += "/meta-tegra/recipes-multimedia/gstreamer/"
 BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
 
-LAYERSERIES_COMPAT_balena-jetson = "warrior"
-LAYERSERIES_COMPAT_tegra = "warrior"
+LAYERSERIES_COMPAT_balena-jetson = "dunfell"
+LAYERSERIES_COMPAT_tegra = "dunfell"
 SERIAL_CONSOLES_jetson-xavier = "115200;ttyTHS0"
 SERIAL_CONSOLES_jetson-tx2 = "115200;ttyS0"
 SERIAL_CONSOLES_jetson-tx1 = "115200;ttyS0"
