--- a/layers/meta-balena-jetson/conf/machine/jetson-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/jetson-nano.conf
@@ -3,7 +3,7 @@
 #@DESCRIPTION: Nvidia Jetson Nano dev board
 
 KERNEL_ARGS ?= "console=ttyS0,115200 console=tty0 fbcon=map:0 net.ifnames=0"
-KERNEL_ROOTSPEC ?= ""
+KERNEL_ROOTSPEC ?= "root=/dev/mmcblk0p${distro_bootpart} rw rootwait"
 IMAGE_ROOTFS_ALIGNMENT ?= "1024"
 
 NVPMODEL ?= "nvpmodel_t210_jetson-nano"
@@ -12,14 +12,12 @@ TEGRA_BOARDID ?= "3448"
 TEGRA_FAB ?= "200"
 TEGRA_BOARDSKU ?= "0000"
 # Extracted from l4t_generate_soc_bup.sh for BOARDID=3448 and board=jetson-nano-qspi-sd
-TEGRA_BUPGEN_SPECS ?= "fab=100 fab=200 fab=300"
+TEGRA_BUPGEN_SPECS ?= "fab=100 fab=200 fab=300 fab=400"
 
 require conf/machine/include/tegra210.inc
 
 KERNEL_DEVICETREE ?= "_ddot_/_ddot_/_ddot_/_ddot_/nvidia/platform/t210/porg/kernel-dts/tegra210-p3448-0000-p3449-0000-a02.dtb \
-                      _ddot_/_ddot_/_ddot_/_ddot_/nvidia/platform/t210/porg/kernel-dts/tegra210-p3448-0000-p3449-0000-b00.dtb"
-
-MACHINE_FEATURES += "ext2 ext3 vfat"
+		      _ddot_/_ddot_/_ddot_/_ddot_/nvidia/platform/t210/porg/kernel-dts/tegra210-p3448-0000-p3449-0000-b00.dtb"
 
 UBOOT_MACHINE = "p3450-0000_defconfig"
 
@@ -29,7 +27,7 @@ BOOTPART_SIZE ?= ""
 BOOTPART_LIMIT ?= "10485760"
 ROOTFSPART_SIZE ?= "15032385536"
 ODMDATA ?= "0x94000"
-EMMC_BCT ?= "P3448_A00_4GB_Micron_4GB_lpddr4_204Mhz_P987.cfg"
+EMMC_BCT ?= "P3448_A00_lpddr4_204Mhz_P987.cfg"
 NVIDIA_BOARD ?= "t210ref"
 NVIDIA_PRODUCT ?= "p3450-porg"
 NVIDIA_BOARD_CFG ?= ""
@@ -38,4 +36,3 @@ TEGRA_SPIFLASH_BOOT ?= "1"
 TEGRAFLASH_SDCARD_SIZE ?= "16G"
 OTABOOTDEV ?= "/dev/mtdblock0"
 OTAGPTDEV ?= "/dev/mtdblock0"
-
