conf/layer: Specify serial consoles for Nano lineup
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -31,3 +31,6 @@ LAYERSERIES_COMPAT_tegra = "dunfell"
 SERIAL_CONSOLES_jetson-xavier = "115200;ttyTHS0"
 SERIAL_CONSOLES_jetson-tx2 = "115200;ttyS0"
 SERIAL_CONSOLES_jetson-tx1 = "115200;ttyS0"
+SERIAL_CONSOLES_jetson-nano = "115200;ttyS0"
+SERIAL_CONSOLES_jetson-nano-emmc = "115200;ttyS0"
+SERIAL_CONSOLES_jetson-nano-2gb-devkit-emmc = "115200;ttyS0"
