jn30b-nano: inherit from jetson-nano-emmc

--- a/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
@@ -2,11 +2,6 @@
 ##@NAME: jn30b-nano
 ##@DESCRIPTION: Machine configuration for the Auvidea JN30B Carrier Board for Nvidia Jetson Nano
 
-MACHINEOVERRIDES = "jetson-nano:${MACHINE}"
-require conf/machine/jetson-nano.conf
+MACHINEOVERRIDES = "jetson-nano-emmc:${MACHINE}"
+require conf/machine/jetson-nano-emmc.conf
 
-# Override emmc specific settings
-TEGRA_FAB = "400"
-TEGRA_BOARDSKU = "0002"
-TEGRA_BUPGEN_SPECS = "fab=200 fab=300 fab=400"
-UBOOT_MACHINE = "p3450-0002_defconfig"
