photon-nano: Set ASPM policy to 'performance'
Change-type: patch
Changelog-entry: Set default ASPM policy for photon-nano
Signed-off-by: Pelle van Gils <pelle@vangils.xyz>

--- a/layers/meta-balena-jetson/conf/machine/photon-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/photon-nano.conf
@@ -5,3 +5,6 @@
 MACHINEOVERRIDES = "jetson-nano-emmc:${MACHINE}"
 require conf/machine/jetson-nano-emmc.conf
 
+# Fix for some PCIe wifi adapters that do not work with the default ASPM
+# 'powersave' policy.
+KERNEL_ARGS_append = " pcie_aspm.policy=performance"
