--- a/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/jn30b-nano.conf
@@ -5,3 +5,5 @@
 MACHINEOVERRIDES = "jetson-nano-emmc:${MACHINE}"
 require conf/machine/jetson-nano-emmc.conf
 
+MACHINEOVERRIDES := "${@'${MACHINEOVERRIDES}'.replace(':${MACHINE}',':jetson-nano-emmc:${MACHINE}')}"
+
