--- a/layers/meta-balena-jetson/conf/machine/photon-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/photon-nano.conf
@@ -5,6 +5,8 @@
 MACHINEOVERRIDES = "jetson-nano-emmc:${MACHINE}"
 require conf/machine/jetson-nano-emmc.conf
 
+MACHINEOVERRIDES := "${@'${MACHINEOVERRIDES}'.replace(':${MACHINE}',':jetson-nano-emmc:${MACHINE}')}"
+
 # Fix for some PCIe wifi adapters that do not work with the default ASPM
 # 'powersave' policy.
 KERNEL_ARGS_append = " pcie_aspm.policy=performance"
