--- a/repo.yml
+++ b/repo.yml
@@ -2,5 +2,7 @@
 type: 'yocto-based OS image'
 reviewers: 1
 upstream:
-  repo: 'meta-balena'
-  url: 'http://github.com/balena-os/meta-balena'
+  - repo: 'meta-balena'
+    url: 'http://github.com/balena-os/meta-balena'
+  - repo: 'balena-yocto-scripts'
+    url: 'http://github.com/balena-os/balena-yocto-scripts'
