--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -30,6 +30,7 @@ LAYERSERIES_COMPAT_balena-jetson = "dunfell"
 LAYERSERIES_COMPAT_tegra = "dunfell"
 SERIAL_CONSOLES_jetson-xavier = "115200;ttyTHS0"
 SERIAL_CONSOLES_jetson-tx2 = "115200;ttyS0"
+SERIAL_CONSOLES_jetson-tx2-4gb = "115200;ttyS0"
 SERIAL_CONSOLES_jetson-tx1 = "115200;ttyS0"
 SERIAL_CONSOLES_jetson-nano = "115200;ttyS0"
 SERIAL_CONSOLES_jetson-nano-emmc = "115200;ttyS0"
