Implement Review Comments: Make Board Naming more descriptive
Change jetson-xavier-seeed-hat names and references  to
jetson-xavier-nx-devkit-seeed-hat

Signed-off-by: Kunal Singh <kunal.singh@aivero.com>

--- a/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-hat.conf
+++ b/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-hat.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: jetson-xavier-seeed-hat
-#@DESCRIPTION: Nvidia Jetson Xavier NX development kit with
+#@NAME: jetson-xavier-nx-devkit-seeed-hat
+#@DESCRIPTION: Nvidia Jetson Xavier NX SDCard Dev kit with
 #              seeed hat board
 
 MACHINEOVERRIDES = "jetson-xavier:${MACHINE}"
