update MACHINEOVERRIDES for jetson-xavier-nx-devkit-seeed-hat
Signed-off-by: Kunal Singh <kunal.singh@aivero.com>

--- a/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-hat.conf
+++ b/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-hat.conf
@@ -3,6 +3,7 @@
 #@DESCRIPTION: Nvidia Jetson Xavier NX SDCard Dev kit with
 #              seeed hat board
 
-MACHINEOVERRIDES = "jetson-xavier:${MACHINE}"
+MACHINEOVERRIDES = "jetson-xavier-nx-devkit:${MACHINE}"
 include conf/machine/jetson-xavier-nx-devkit.conf
+
 
