--- a/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-hat.conf
+++ b/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-hat.conf
@@ -6,4 +6,5 @@
 MACHINEOVERRIDES = "jetson-xavier-nx-devkit:${MACHINE}"
 include conf/machine/jetson-xavier-nx-devkit.conf
 
-
+# work-around for https://github.com/OE4T/meta-tegra/issues/400
+MACHINEOVERRIDES := "${@'${MACHINEOVERRIDES}'.replace(':${MACHINE}',':jetson-xavier-nx-devkit:${MACHINE}')}"
