change board name to jetson-xavier-nx-devkit-seeed-2mic-hat
Changed names/references from seeed-mic to seeed-2mic-hat in
order to make product identification easier

Changelog-entry: change board name to jetson-xavier-nx-devkit-seeed-2mic-hat
Signed-off-by: Kunal Singh <kunal.singh@aivero.com>

--- a/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-2mic-hat.conf
+++ b/layers/meta-balena-jetson/conf/machine/jetson-xavier-nx-devkit-seeed-2mic-hat.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
-#@NAME: jetson-xavier-nx-devkit-seeed-hat
+#@NAME: jetson-xavier-nx-devkit-seeed-2mic-hat
 #@DESCRIPTION: Nvidia Jetson Xavier NX SDCard Dev kit with
-#              seeed hat board
+#              seeed Respeaker 2-mic hat board
 
 MACHINEOVERRIDES = "jetson-xavier-nx-devkit:${MACHINE}"
 include conf/machine/jetson-xavier-nx-devkit.conf
