--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -13,19 +13,19 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "tegra-nvpmodel tegra-configs-nvstartup tegra-configs-udev"
 
-BBMASK += "/meta-tegra/recipes-core/ "
-BBMASK += "/meta-tegra/recipes-graphics/cairo "
-BBMASK += "/meta-tegra/recipes-graphics/clutter "
-BBMASK += "/meta-tegra/recipes-graphics/cogl "
-BBMASK += "/meta-tegra/recipes-graphics/drm "
-BBMASK += "/meta-tegra/recipes-graphics/mesa "
-BBMASK += "/meta-tegra/recipes-graphics/vulkan "
-BBMASK += "/meta-tegra/recipes-graphics/wayland "
-BBMASK += "/meta-tegra/recipes-graphics/xorg-xserver "
-BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
-BBMASK += "/meta-tegra/recipes-multimedia/gstreamer/"
-BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
-BBMASK += "/meta-tegra/recipes-graphics/xwayland"
+#BBMASK += "/meta-tegra/recipes-core/ "
+#BBMASK += "/meta-tegra/recipes-graphics/cairo "
+#BBMASK += "/meta-tegra/recipes-graphics/clutter "
+#BBMASK += "/meta-tegra/recipes-graphics/cogl "
+#BBMASK += "/meta-tegra/recipes-graphics/drm "
+#BBMASK += "/meta-tegra/recipes-graphics/mesa "
+#BBMASK += "/meta-tegra/recipes-graphics/vulkan "
+#BBMASK += "/meta-tegra/recipes-graphics/wayland "
+#BBMASK += "/meta-tegra/recipes-graphics/xorg-xserver "
+#BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
+#BBMASK += "/meta-tegra/recipes-multimedia/gstreamer/"
+#BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
+#BBMASK += "/meta-tegra/recipes-graphics/xwayland"
 
 LAYERSERIES_COMPAT_balena-jetson = "dunfell"
 LAYERSERIES_COMPAT_tegra = "dunfell"
