conf/layer: Switch to honister syntax
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_PRIORITY_balena-jetson = "1337"
 
 # kernel-image is installed by meta-tegra. We use kernel-image-initramfs
 # Remove kernel-image package
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS:remove = "kernel-image"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "tegra-nvpmodel tegra-configs-nvstartup tegra-configs-udev"
 
@@ -27,11 +27,13 @@ BBMASK += "/meta-tegra/recipes-multimedia/gstreamer/"
 BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
 BBMASK += "/meta-tegra/recipes-graphics/xwayland"
 
-LAYERSERIES_COMPAT_balena-jetson = "dunfell"
-LAYERSERIES_COMPAT_tegra = "dunfell"
-SERIAL_CONSOLES_jetson-xavier = "115200;ttyTHS0"
-SERIAL_CONSOLES_jetson-tx2 = "115200;ttyS0"
-SERIAL_CONSOLES_jetson-tx1 = "115200;ttyS0"
-SERIAL_CONSOLES_jetson-nano = "115200;ttyS0"
-SERIAL_CONSOLES_jetson-nano-emmc = "115200;ttyS0"
-SERIAL_CONSOLES_jetson-nano-2gb-devkit-emmc = "115200;ttyS0"
+LAYERSERIES_COMPAT_balena-jetson = "honister"
+SERIAL_CONSOLES:jetson-xavier = "115200;ttyTHS0"
+SERIAL_CONSOLES:jetson-tx2 = "115200;ttyS0"
+SERIAL_CONSOLES:jetson-tx1 = "115200;ttyS0"
+SERIAL_CONSOLES:jetson-nano = "115200;ttyS0"
+SERIAL_CONSOLES:jetson-nano-emmc = "115200;ttyS0"
+SERIAL_CONSOLES:jetson-nano-2gb-devkit-emmc = "115200;ttyS0"
+
+KERNEL_IMAGETYPES = "Image"
+KERNEL_IMAGETYPE = "Image"
