conf/machine: Switch to new syntax
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/machine/photon-nano.conf
+++ b/layers/meta-balena-jetson/conf/machine/photon-nano.conf
@@ -9,4 +9,4 @@ MACHINEOVERRIDES := "${@'${MACHINEOVERRIDES}'.replace(':${MACHINE}',':jetson-nan
 
 # Fix for some PCIe wifi adapters that do not work with the default ASPM
 # 'powersave' policy.
-KERNEL_ARGS_append = " pcie_aspm.policy=performance"
+KERNEL_ARGS:append = " pcie_aspm.policy=performance"
