--- a/layers/meta-balena-jetson/recipes-bsp/tools/files/active_slot_set.conf
+++ b/layers/meta-balena-jetson/recipes-bsp/tools/files/active_slot_set.conf
@@ -1,3 +1,3 @@
 [Service]
-ExecStartPre=/bin/bash -c '/usr/bin/tegra-boot-control -e && /usr/bin/tegra-boot-control -m && /usr/bin/tegra-bootinfo -b'
-ExecStartPost=/bin/bash -c '/usr/bin/tegra-boot-control -e && /usr/bin/tegra-boot-control -m && /usr/bin/tegra-bootinfo -b'
+ExecStartPre=@BASE_BINDIR@/bash @BINDIR@/set_active_tegra_boot_slot.sh
+ExecStartPost=@BASE_BINDIR@/bash @BINDIR@/set_active_tegra_boot_slot.sh
