conf/layer: Enable PMIC WDT for the NX Devkit SD-CARD
Cboot 32.6.1 may exhibit a sporadic hang during boot,
and the only to get out of this state is to eiter power
cycle the device manually or have the PMIC WDT enabled instead
of Tegra WDT. The sporadic hang is caused by cboot not
finding any partitions on the sd-card, and this seems
to happen right after a reboot, but very infrequently, and only
on the sd-card version of the device.

We enable the PMIC watchdog via ODMDATA on this particular
device.

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -37,3 +37,9 @@ SERIAL_CONSOLES:jetson-nano-2gb-devkit-emmc = "115200;ttyS0"
 
 KERNEL_IMAGETYPES = "Image"
 KERNEL_IMAGETYPE = "Image"
+
+# Enable PMIC WDT in ODMDATA. This comes
+# disabled by default on standard ODMDATA 0xB8190000
+# We do so on the Xavier NX Devkit because of the following
+# issue: https://github.com/OE4T/meta-tegra/issues/891#issuecomment-1027875304
+ODMDATA:jetson-xavier-nx-devkit = "0xB81A0000"
