conf/layer: Set partition table type globally
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -37,3 +37,5 @@ SERIAL_CONSOLES:jetson-nano-2gb-devkit-emmc = "115200;ttyS0"
 
 KERNEL_IMAGETYPES = "Image"
 KERNEL_IMAGETYPE = "Image"
+
+PARTITION_TABLE_TYPE = "gpt"
