--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -28,6 +28,7 @@ BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
 BBMASK += "/meta-tegra/recipes-graphics/xwayland"
 
 LAYERSERIES_COMPAT_balena-jetson = "honister"
+LAYERSERIES_COMPAT_tegra = "honister"
 SERIAL_CONSOLES:jetson-xavier = "115200;ttyTHS0"
 SERIAL_CONSOLES:jetson-tx2 = "115200;ttyS0"
 SERIAL_CONSOLES:jetson-tx1 = "115200;ttyS0"
