layer: Use tegra-boot-tools archive
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -26,6 +26,7 @@ BBMASK += "/meta-tegra/external/openembedded-layer/recipes-support/opencv/ "
 BBMASK += "/meta-tegra/recipes-multimedia/gstreamer/"
 BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
 BBMASK += "/meta-tegra/recipes-graphics/xwayland"
+BBMASK += "/meta-tegra/recipes-bsp/tools/tegra-boot-tools_git.bb"
 
 LAYERSERIES_COMPAT_balena-jetson = "honister"
 LAYERSERIES_COMPAT_tegra = "honister"
