--- a/layers/meta-balena-jetson/conf/samples/local.conf.sample
+++ b/layers/meta-balena-jetson/conf/samples/local.conf.sample
@@ -42,7 +42,7 @@ DISTRO ?= "resin-systemd"
 RM_OLD_IMAGE = "1"
 
 # Additional image features
-USER_CLASSES ?= "buildstats image-prelink"
+USER_CLASSES ?= "buildstats"
 
 # By default disable interactive patch resolution (tasks will just fail instead):
 PATCHRESOLVE = "noop"
