--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -28,8 +28,7 @@ BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
 BBMASK += "/meta-tegra/recipes-graphics/xwayland"
 BBMASK += "/meta-tegra/recipes-bsp/tools/tegra-boot-tools_git.bb"
 
-LAYERSERIES_COMPAT_balena-jetson = "honister"
-LAYERSERIES_COMPAT_tegra = "honister"
+LAYERSERIES_COMPAT_balena-jetson = "kirkstone"
 SERIAL_CONSOLES:jetson-xavier = "115200;ttyTHS0"
 SERIAL_CONSOLES:jetson-tx2 = "115200;ttyS0"
 SERIAL_CONSOLES:jetson-tx1 = "115200;ttyS0"
