--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_PRIORITY_balena-jetson = "1337"
 # kernel-image is installed by meta-tegra. We use kernel-image-initramfs
 # Remove kernel-image package
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS:remove = "kernel-image"
-
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS:remove = "kernel-image-initramfs"
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "tegra-nvpmodel tegra-configs-nvstartup tegra-configs-udev"
 
 BBMASK += "/meta-tegra/recipes-core/ "
