recipes-bsp: Work around broken and malformed 32.7.3 BSP download URIs
Changelog-entry: recipes-bsp: Work around broken and malformed 32.7.3 BSP download URIs
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -28,6 +28,12 @@ BBMASK += "/meta-tegra/recipes-bsp/l4t-usb-device-mode/"
 BBMASK += "/meta-tegra/recipes-graphics/xwayland"
 BBMASK += "/meta-tegra/recipes-bsp/tools/tegra-boot-tools_git.bb"
 
+BBMASK += "/meta-tegra/recipes-bsp/tegra-sources"
+BBMASK += "/meta-tegra/recipes-bsp/tegra-binaries/tegra-binaries-32.7.3.inc"
+BBMASK += "/meta-tegra/recipes-bsp/tegra-binaries/tegra-binaries_32.7.3.bb"
+BBMASK += "/meta-tegra/recipes-bsp/tegra-binaries/tegra210-flashtools-native_32.7.3.bb"
+BBMASK += "/meta-tegra/recipes-bsp/tegra-binaries/tegra186-flashtools-native_32.7.3.bb"
+
 LAYERSERIES_COMPAT_balena-jetson = "kirkstone"
 SERIAL_CONSOLES:jetson-xavier = "115200;ttyTHS0"
 SERIAL_CONSOLES:jetson-tx2 = "115200;ttyS0"
