--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -40,3 +40,8 @@ KERNEL_IMAGETYPES = "Image"
 KERNEL_IMAGETYPE = "Image"
 
 PARTITION_TABLE_TYPE = "gpt"
+
+# glibc does not compile with -Os, we should be aware
+# of this when trying to make more space in the rootfs or
+# initramfs.
+#FULL_OPTIMIZATION:jetson-tx2 = "-Os -pipe ${DEBUG_FLAGS}"
