layer: Trigger testbot run
Changelog-entry: layer: Trigger testbot run
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -43,5 +43,5 @@ PARTITION_TABLE_TYPE = "gpt"
 
 # glibc does not compile with -Os, we should be aware
 # of this when trying to make more space in the rootfs or
-# initramfs.
+# initramfs
 #FULL_OPTIMIZATION:jetson-tx2 = "-Os -pipe ${DEBUG_FLAGS}"
