workflows: Run Jetson Nano eMMC tests
Changelog-entry: workflows: Run Jetson Nano eMMC tests
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/.github/workflows/jetson-nano-emmc.yml
+++ b/.github/workflows/jetson-nano-emmc.yml
@@ -55,6 +55,12 @@ jobs:
     secrets: inherit
     with:
       machine: jetson-nano-emmc
+      test_matrix: >
+        {
+          "test_suite": ["os","cloud","hup"],
+          "environment": ["balena-cloud.com"],
+          "runs_on": [["ubuntu-latest"]]
+        }
       # Allow manual workflow runs to force finalize without checking previous test runs
       force-finalize: ${{ inputs.force-finalize || false }}
       # Default to balena-staging.com for workflow dispatch, but balena-cloud.com for other events
