--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -45,3 +45,6 @@ PARTITION_TABLE_TYPE = "gpt"
 # of this when trying to make more space in the rootfs or
 # initramfs.
 #FULL_OPTIMIZATION:jetson-tx2 = "-Os -pipe ${DEBUG_FLAGS}"
+
+# 4.9 kernel is too old for firmware compression
+FIRMWARE_COMPRESSION = "0"
