conf/layer: Disable firmware compression
... because it isn't supported by the kernel 4.9 for these boards

Changelog-entry: conf/layer: Disable firmware compression
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-jetson/conf/layer.conf
+++ b/layers/meta-balena-jetson/conf/layer.conf
@@ -45,3 +45,6 @@ PARTITION_TABLE_TYPE = "gpt"
 # of this when trying to make more space in the rootfs or
 # initramfs.
 #FULL_OPTIMIZATION:jetson-tx2 = "-Os -pipe ${DEBUG_FLAGS}"
+
+# Kernel 4.9 is the last version for these boards and it does not support firmware compression
+FIRMWARE_COMPRESSION = "0"
