workflows: Move testing to BC from BM
Changelog-entry: workflows: workflows: Move testing to BC from BM
Signed-off-by: Ryan Cooke<ryan@balena.io>

--- a/.github/workflows/jetson-tx2.yml
+++ b/.github/workflows/jetson-tx2.yml
@@ -60,7 +60,7 @@ jobs:
       test_matrix: >
         {
           "test_suite": ["os","cloud","hup"],
-          "environment": ["bm.balena-dev.com"],
+          "environment": ["balena-cloud.com"],
           "runs_on": [["ubuntu-latest"]]
         }
       # Allow manual workflow runs to force finalize without checking previous test runs
